Add 2 new pipelines.

--- a/wercker.yml
+++ b/wercker.yml
@@ -7,3 +7,13 @@ webhook2:
   steps:
     - script:
       code: echo "webhook2"  
+build:
+  steps:
+    - script:
+      code: find /
+downstream:
+  steps:
+    - script:
+      code: find /
+
+
