--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,6 +17,10 @@ workflows:
      triggers:
        - schedule:
            cron: "*/12 0 * * *"
+           filters:
+           branches:
+              only:
+                - master
      jobs:
        - build
 
