--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,11 +16,7 @@ workflows:
    nightly:
      triggers:
        - schedule:
-           cron: "*/12 0 * * *"
-           filters:
-             branches:
-               only:
-                 - master
+           cron: "0, 5,10,15,20,25,30,35,40,45,50,55 * * * *"
      jobs:
        - build
 
