More fix syntax.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,11 +12,11 @@ jobs:
           name: Print the Current Time
           command: date
 workflows:
-   version: 2
-   nightly:
-     triggers:
-       - schedule:
-           cron: "0, 5,10,15,20,25,30,35,40,45,50,55 * * * *"
-     jobs:
-       - build
+  version: 2
+  nightly:
+    triggers:
+      - schedule: 
+          cron: "50 * * * *"
+    jobs:
+      - build 
 
