Schedule on change_circle_in_branch

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,6 +21,7 @@ workflows:
             branches:
               only:
                 - master
+                - change_circle_in_branch
     jobs:
       - build 
 
