--- a/hello-helidon/hello-helidon-comp.yaml
+++ b/hello-helidon/hello-helidon-comp.yaml
@@ -4,7 +4,7 @@ apiVersion: core.oam.dev/v1alpha2
 kind: Component
 metadata:
   name: hello-helidon-component
-  namespcae: hello-helidon-fleet
+  namespace: hello-helidon-fleet
 spec:
   workload:
     apiVersion: oam.verrazzano.io/v1alpha1
